# quantum-bench

./: .gitignore  README.md  deep-research-report.md  gemini-research.md  pyproject.toml
docs/data/: cuquantum-campaign-summary.json  cuquantum-depth-curves.csv  cuquantum-error-summary.csv  cuquantum-frontier-summary.csv  cuquantum-profile-summary.csv  cuquantum-slice-summary.csv  current-machine-frontier.json  current-machine-hardware.json
docs/reports/: cuquantum-benchmark-campaign.md  current-machine-frontier.md  public-repo-guidelines.md
profiles/: cuquantum-exact-frontier-appliance.json  cuquantum-exact-frontier-wsl.json  cuquantum-ideal-depth-sweep-wsl.json  cuquantum-noisy-depth-sweep-wsl.json  cuquantum-observable-frontier-appliance.json  cuquantum-observable-frontier-wsl.json  cuquantum-speed-sweep-wsl.json  dev-wsl-gpu.json  dev.json  frontier-wsl-gpu.json  frontier-wsl-qulacs.json  full.json
quantum_bench/: __init__.py  __main__.py  artifacts.py  capability.py  cli.py  comparison.py  config.py  env_report.py  models.py  plotting.py  probability.py  recipes.py  reference.py  reporting.py  runner.py  telemetry.py  utils.py  wsl_runner.py
scripts/: debug_resume_now.sh  generate_cuquantum_campaign_report.py  generate_public_report_assets.py  resume_exact_frontier.py  resume_exact_frontier_foreground.sh  resume_exact_frontier_nohup.sh  resume_missing_cuquantum_foreground.sh  run_wsl_frontier_precision.ps1  start_missing_cuquantum_tmux.sh  start_resume_exact_frontier_tmux.sh
tests/: test_probability.py  test_profiles.py  test_qiskit_adapter.py
(+4 files in other folders)
