[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-bench"
version = "0.1.0"
description = "Portable CPU/GPU quantum circuit benchmark harness for NVIDIA-focused simulation studies."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
quantum-bench = "quantum_bench.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["quantum_bench*"]
